# FastSearch

./: Dockerfile  README.md  add_products.py  docker-compose.yaml  pyproject.toml
app/: main.py
app/application/use_cases/: product_use_case.py
app/domain/entities/: product.py
app/domain/interfaces/: i_product.py
app/infrastructure/: elasticsearch.py  elasticsearch_client.py  repositories.py
app/presentation/: routes.py
